# shinan

./: .gitignore  README.md  docker-compose.yml
backend/app/: Dockerfile  context.py  dump.rdb  main.py  pyproject.toml  shinan_mcp.py  shinanmcp.py  supervisord.conf
backend/app/routers/: chat.py  client.py  file_upload.py  health.py  root.py
backend/app/tools/: analysis_agent.py  guardrail_agent.py  idea_agent.py  material_agent.py  pdf_agent.py  prompts.py  simple_agent.py  test.py  web_search_agent.py  writer_agent.py
backend/app/tools/deep_research/: deep_research_agent.py
backend/app/tools/idea_generation/: clarification_agent.py  deep_research_agents.py  guardrail_agent.py  material_idea_agent.py  text_idea_agent.py
backend/app/tools/mcp/: vector_store.py
backend/app/tools/messages/: messages_agent.py  simple_agent.py
backend/app/tools/report_generation/: verifier_agent.py  writer_agent.py
backend/app/tools/research/: search_agent.py  web_search_agent.py
backend/app/tools/sb_blogs_store/: softbank.py  vector_store.py
backend/app/tools/web_search/: web_search_agent.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Chat.tsx  ContextPrompt.tsx  FileUpload.tsx
